# discord-resume-filter

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
bot/: client.py  config.py  handler.py  main.py
bot/actions/: log.py  notify.py  repost.py
bot/detection/: classifier.py  detector.py  prefilter.py
tests/: test_prefilter.py
